@@ -46,102 +46,101 @@
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.graalvm.buildtools</groupId>
-                <artifactId>native-maven-plugin</artifactId>
-                <version>0.11.0</version>
-            </plugin>
-
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>3.5.4</version>
-                <configuration>
-                    <mainClass>${main-class}</mainClass>
-                    <image>
-                        <name>csouzadocker/${artifactId}</name>
-                        <builder>paketobuildpacks/builder-jammy-java-tiny:latest</builder>
-                        <env>
-                            <BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
-                            <BP_JVM_VERSION>21</BP_JVM_VERSION>
-                            <BP_NATIVE_IMAGE_BUILD_ARGUMENTS>
-                                -H:IncludeResources=".*"
-                                -march=skylake
-                                --native-compiler-options=-march=skylake
-                                --native-compiler-options=-mtune=skylake
-                                --no-fallback
-                                -O3
-                                --gc=serial
-                            </BP_NATIVE_IMAGE_BUILD_ARGUMENTS>
-                        </env>
-                    </image>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
 <!--    <build>-->
 <!--        <plugins>-->
 <!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-compiler-plugin</artifactId>-->
-<!--                <version>3.13.0</version>-->
-<!--                <configuration>-->
-<!--                    <source>${maven.compiler.source}</source>-->
-<!--                    <target>${maven.compiler.target}</target>-->
-<!--                    <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
-<!--                </configuration>-->
+<!--                <groupId>org.graalvm.buildtools</groupId>-->
+<!--                <artifactId>native-maven-plugin</artifactId>-->
+<!--                <version>0.11.0</version>-->
 <!--            </plugin>-->
+
 <!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-jar-plugin</artifactId>-->
-<!--                <version>3.4.2</version>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--                <version>3.5.4</version>-->
 <!--                <configuration>-->
-<!--                    <archive>-->
-<!--                        <manifest>-->
-<!--                            <addClasspath>true</addClasspath>-->
-<!--                            <mainClass>${main-class}</mainClass>-->
-<!--                        </manifest>-->
-<!--                    </archive>-->
+<!--                    <mainClass>${main-class}</mainClass>-->
+<!--                    <image>-->
+<!--                        <name>csouzadocker/${artifactId}</name>-->
+<!--                        <builder>paketobuildpacks/builder-jammy-java-tiny:latest</builder>-->
+<!--                        <env>-->
+<!--                            <BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>-->
+<!--                            <BP_JVM_VERSION>21</BP_JVM_VERSION>-->
+<!--                            <BP_NATIVE_IMAGE_BUILD_ARGUMENTS>-->
+<!--                                -H:IncludeResources=".*"-->
+<!--                                -march=skylake-->
+<!--                                &#45;&#45;native-compiler-options=-march=skylake-->
+<!--                                &#45;&#45;native-compiler-options=-mtune=skylake-->
+<!--                                &#45;&#45;no-fallback-->
+<!--                                -O3-->
+<!--                                &#45;&#45;gc=serial-->
+<!--                            </BP_NATIVE_IMAGE_BUILD_ARGUMENTS>-->
+<!--                        </env>-->
+<!--                    </image>-->
 <!--                </configuration>-->
 <!--            </plugin>-->
 <!--        </plugins>-->
 <!--    </build>-->
 
-<!--    <profiles>-->
-<!--        <profile>-->
-<!--            <id>native</id>-->
-<!--            <build>-->
-<!--                <plugins>-->
-<!--                    <plugin>-->
-<!--                        <groupId>org.graalvm.buildtools</groupId>-->
-<!--                        <artifactId>native-maven-plugin</artifactId>-->
-<!--                        <version>0.11.0</version>-->
-<!--                        <extensions>true</extensions>-->
-<!--                        <executions>-->
-<!--                            <execution>-->
-<!--                                <id>build-native</id>-->
-<!--                                <goals>-->
-<!--                                    <goal>compile-no-fork</goal>-->
-<!--                                </goals>-->
-<!--                                <phase>package</phase>-->
-<!--                            </execution>-->
-<!--                        </executions>-->
-<!--                        <configuration>-->
-<!--                            <mainClass>${main-class}</mainClass>-->
-<!--                            <buildArgs>-->
-<!--                                &#45;&#45;enable-http-->
-<!--&lt;!&ndash;                                -march=compatibility&ndash;&gt;-->
-<!--                                &#45;&#45;native-compiler-options=-march=skylake-->
-<!--&lt;!&ndash;                                &#45;&#45;native-compiler-options=-mtune=skylake&ndash;&gt;-->
-<!--                            </buildArgs>-->
-<!--                        </configuration>-->
-<!--                    </plugin>-->
-<!--                </plugins>-->
-<!--            </build>-->
-<!--        </profile>-->
-<!--    </profiles>-->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.4.2</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>${main-class}</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <profiles>
+        <profile>
+            <id>native</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>0.11.0</version>
+                        <extensions>true</extensions>
+                        <executions>
+                            <execution>
+                                <id>build-native</id>
+                                <goals>
+                                    <goal>compile-no-fork</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <mainClass>${main-class}</mainClass>
+                            <buildArgs>
+                                --enable-http
+<!--                                -march=compatibility-->
+                                -march=skylake
+                            </buildArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
